--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         &copy; 2022 All rights reserved 
       </p>
     </footer>
-
+    <script src="https://moment.github.io/luxon/global/luxon.js"></script>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
