--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <p class="time-display"></p>
     <section class="book_list_section">
-      <h2 class="header">Awesome books list</h2>
+      <h2 class="header">All Awesome books</h2>
       <ul class="book_list"></ul>
     </section>
     <section class="add_book">
@@ -32,8 +32,9 @@
       </form>
     </section>
     <section class="contact_section">
-      <h2 class="header">Contact Us</h2>
+      <h2 class="header">Contact Information</h2>
       <p class="contact_details">
+        Do you have any questions or just want to say "Hello"? <br />
         You can reach out to us!
       </p>
       <ul class="contacts">
@@ -44,10 +45,11 @@
     </section>
     <footer class="footer">
       <p class="footer_text">
-        &copy; 2022 All rights reserved 
+        &copy; 2022 All rights reserved.. <br />
+        Created with <span class="heart">&hearts;</span>
       </p>
     </footer>
-    <script src="https://moment.github.io/luxon/global/luxon.js"></script>
+
     <script src="./index.js" type="module"></script>
   </body>
 </html>
